--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Sunggwan Hong blog
 email:
 description:
 baseurl: # the optional subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: https://sghong_blog.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 author:
   name:
   twitter:
